using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using Unity.VisualScripting;

internal class AnimationString
{
    internal static string isMoving = "IsMoving";
    internal static string isRoll = "IsRoll";
    internal static string isGrounded = "IsGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string IsOnWall = "IsOnWall";
    internal static string IsOnCeiling = "IsOnCeiling";
    internal static string IsCastingMagic = "IsCastingMagic";
    internal static string attackTrigger = "attack";
    internal static string attackCount = "AttackCount";
    internal static string magicTrigger = "magic";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string IsAlive = "IsAlive";
    internal static string isHit = "IsHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string attackCooldown = "attackCooldown";
    internal static string canSummon = "canSummon";
    internal static string summonCoolDown = "summonCoolDown";
    internal static string skill = "skill";
    internal static string skillCoolDown = "skillCoolDown";
    internal static string isOpen = "isOpen";
    internal static string isAttack = "isAttack";
}

